# PyPhonPlan

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: coupled_fields.py  dual_fields.ipynb  field_to_task.py  gestures.py  shadowing.ipynb  simulate_tract_variables.ipynb  single_field.ipynb  single_field.py  task_dynamics.py  tract_variables.ipynb
paper/: PyPhonPlan.tex  make_figures.py  refs.bib
src/pyphonplan/: __init__.py
src/pyphonplan/field/: __init__.py  coupled.py  field.py  inputs.py  kernel.py
src/pyphonplan/targets/: __init__.py  targets.py
src/pyphonplan/task/: __init__.py  solver.py
src/pyphonplan/taskdynamics/: __init__.py  solver.py
src/pyphonplan/viz/: __init__.py  field_animation.py  field_plots.py  target_plots.py  task_plots.py
