[project]
name = "pyphonplan"
version = "0.1.0"
description = "Dynamic field theory planning + task dynamic execution for computational phonetics"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyphonplan"]
