[project]
name = "pyphonplan"
version = "0.1.0"
description = "Simulating phonetic planning with dynamic neural fields and task dynamics"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyphonplan"]
